@@ -146,6 +146,9 @@ Installation
   must set the DDD_HOME and XUSERFILESEARCH environment variables.
   See the `INSTALL' file for details.
 
+- The configure `--enable-rpath' option allows you to specify a path
+  to be searched for dynamic libraries at run-time.
+
 - DDD Makefiles are now GNU standards-compliant and generated by automake.
 
 - DDD Makefiles use libtool for generic shared library support.
